# omtalk

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  compiler.md  notes.org  readme.md  workspace.code-workspace
ab/util/: CMakeLists.txt
ab/util/include/ab/Util/: Algorithm.h  Annotations.h  Assert.h  Atomic.h  Bit.h  BitArray.h  Box.h  ByteBuffer.h  Bytes.h  CppUtil.h  Eytzinger.h  IntrusiveList.h  Math.h  StringTable.h  ValueIter.h
ab/util/test/: test-atomic.cpp  test-bitarray.cpp  test-bits.cpp  test-eytzinger.cpp  test-intrusivelist.cpp  test-math.cpp
compiler/: CMakeLists.txt
compiler/include/mlir/Dialect/: CMakeLists.txt
compiler/include/mlir/Dialect/Omtalk/: Omtalk.h
compiler/lib/Dialect/: CMakeLists.txt
compiler/lib/Dialect/Om/IR/: CMakeLists.txt  OmDialect.cpp  OmOps.cpp
compiler/lib/Dialect/Omtalk/: OmtalkDialect.cpp  OmtalkOps.cpp
compiler/lib/Dialect/Omtalk/IR/: CMakeLists.txt  OmtalkDialect.cpp  OmtalkOps.cpp
compiler/lib/Dialect/Omtalk/Transforms/: Canonicalize.cpp
compiler/test/: CMakeLists.txt
core/: CMakeLists.txt
core/include/: CMakeLists.txt
core/include/omtalk/: CMakeLists.txt  KlassInfo.h  KlassLoader.h  ObjectModel.h  Objects.h  Objects.td  Runtime.h  SymbolTable.h
core/include/omtalk/IRGen/: IRGen.h
core/src/: Runtime.cpp
core/src/IRGen/: IRGen.cpp
gc/: CMakeLists.txt  docs.md
gc/benchmark/: CMakeLists.txt  bench-allocate.cpp  bench-forwarding.cpp  bench-markmap.cpp
gc/docs/: garbage-collection.md
gc/example/: CMakeLists.txt
gc/example/include/example/: Object.h
gc/include/omtalk/: Allocate.h  Arena.h  ArenaManager.h  ArenaMap.h  Barrier.h  Barriers.h  Copy.h  Dispatcher.h  Fixup.h  Forward.h  ForwardingMap.h  ForwardingTable.h  GC.h  GlobalCollector.h  Handle.h  Heap.h  Mark.h  MarkCompactWorker.h  MarkFixup.h  MemoryManager.h  MutatorLock.h  MutatorMutex.h  Record.h  Ref.h  RegionManager.h  Scavenge.h  Scheduler.h  Scheme.h  Sweep.h  Tracing.h  Workstack.h
gc/src/: Allocate.cpp  ArenaManager.cpp  MemoryManager.cpp  MutatorMutex.cpp
gc/test/: CMakeLists.txt  Object.h  test-arenas.cpp  test-compact.cpp  test-dispatcher.cpp  test-exclusive.cpp  test-forwarding.cpp  test-gc.cpp  test-handle.cpp  test-mark.cpp  test-mutatormutex.cpp  test-regions.cpp  test-roots.cpp  test-startup.cpp
object-model/: CMakeLists.txt
object-model/include/omtalk/Om/: ObjectModel.h  StructBuilder.h  StructType.h  Type.h
object-model/src/: ObjectModel.cpp
object-model/test/: test-objectmodel.cpp  test-structbuilder.cpp  test-type.cpp
om/gc/: CMakeLists.txt
om/gc/benchmark/: CMakeLists.txt  bench-allocate.cpp  bench-forwarding.cpp  bench-markmap.cpp
om/gc/example/: CMakeLists.txt
om/gc/example/include/example/: Object.h
om/gc/include/om/GC/: Allocate.h  Barrier.h  Copy.h  Dispatcher.h  Fixup.h  Forward.h  ForwardingMap.h  GC.h  GlobalCollector.h  Handle.h  Heap.h  Mark.h  MarkCompactWorker.h  MarkFixup.h  MemoryManager.h  MutatorMutex.h  Record.h  Ref.h  Scavenge.h  Scheme.h  Sweep.h  Workstack.h
om/gc/src/: MemoryManager.cpp  MutatorMutex.cpp
om/gc/test/: CMakeLists.txt  test-compact.cpp  test-dispatcher.cpp  test-exclusive.cpp  test-forwarding.cpp  test-gc.cpp  test-handle.cpp  test-mark.cpp  test-mutatormutex.cpp  test-regions.cpp  test-roots.cpp  test-startup.cpp
om/om/: CMakeLists.txt
om/om/src/: ObjectModel.cpp  om-MemoryManager.cpp  om-StructLayout.cpp  om-StructLayoutBuilder.cpp  om-om-dummy.cpp  om-om-global.cpp
om/om/test/: test-objectmodel.cpp  test-structbuilder.cpp  test-structlayout.cpp  test-type.cpp
omtalk-gc/: CMakeLists.txt
omtalk-gc/include/omtalk/: Assert.h  BitArray.h  Bytes.h  GC.h  Handle.h  Heap.h  IntrusiveList.h  Ref.h  WorkStack.h
omtalk-gc/src/: GC.cpp
omtalk-gc/test/: main.cpp
omtalk-mlir/: CMakeLists.txt
omtalk-mlir/include/: CMakeLists.txt
omtalk-mlir/include/omtalk/: CMakeLists.txt  dialect.hpp  inliner.hpp  ops.td  parser.hpp  passes.hpp  types.hpp
omtalk-mlir/lib/Conversion/: OmtalkToLLVM.cpp
omtalk-mlir/lib/Dialect/Omtalk/: OmtalkDialect.cpp
omtalk-mlir/src/: CMakeLists.txt  canonicalize.cpp  canonicalize.td  dead_code_elimination.cpp  dialect.cpp  lowering.cpp  main.cpp  omtalk.cpp  parser.cpp
omtalk-mlir/src/Conversion/: OmtalkToLLVM.cpp
omtalk-mlir/src/Dialect/Omtalk/: OmtalkDialect.cpp  Ops.cpp
omtalk-mlir/src/Transforms/: CMakeLists.txt  Canonicalize.cpp  Canonicalize.td  DeadCodeElimination.cpp
omtalk-mlir/test/: CMakeLists.txt  dialect_environment.hpp  main.cpp  test.cpp
omtalk-opt/: CMakeLists.txt
omtalk/core/: CMakeLists.txt
omtalk/core/include/omtalk/: KlassLoader.h  ObjectModel.h  Omtalk.h  Runtime.h  SymbolTable.h
omtalk/core/src/: Runtime.cpp
omtalk/core/src/IRGen/: IRGen.cpp
omtalk/ir/: CMakeLists.txt
omtalk/ir/src/: Canonicalize.cpp  Canonicalize.td  OmtalkDialect.cpp  OmtalkOps.cpp  OmtalkTypes.cpp
omtalk/ir/test/: CMakeLists.txt  dialect_environment.hpp  main.cpp  test.cpp
omtalk/tools/omtalk/: CMakeLists.txt  omtalk.cpp
omtalk/tools/omtalk-parser/: CMakeLists.txt  omtalk-parser.cpp
omtalk/vm/test/: CMakeLists.txt  test_allocation.cpp  test_allocator.cpp  test_calling_conventions.cpp  test_integer.cpp  test_parser.cpp  test_stack.cpp  test_startup.cpp  test_symbol_table.cpp
parser/: CMakeLists.txt
parser/include/omtalk/Parser/: AST.h  Debug.h  Location.h  Parser.h
parser/src/: Dumper.cpp  ParseCursor.h  Parser.cpp  old.cpp
tools/: CMakeLists.txt
tools/om-gen/: CMakeLists.txt  README.md
tools/om-gen/src/: om-gen-main.cpp
tools/omtalk/: CMakeLists.txt  omtalk.cpp
tools/omtalk-opt/: CMakeLists.txt  omtalk-opt.cpp
tools/omtalk-parser/: CMakeLists.txt  omtalk-parser.cpp
tools/omtalk-tblgen/: CMakeLists.txt  omtalk-tblgen.cpp
util/: CMakeLists.txt
util/include/omtalk/Util/: Annotations.h  Assert.h  Atomic.h  Bit.h  BitArray.h  BitChunk.h  Box.h  ByteBuffer.h  Bytes.h  CppUtil.h  Eytzinger.h  Hash.h  IntrusiveList.h  Math.h  Mutex.h  StringTable.h  Types.h  ValueIter.h
util/test/: test-atomic.cpp  test-bitarray.cpp  test-bits.cpp  test-eytzinger.cpp  test-intrusivelist.cpp  test-math.cpp
(+225 files in other folders)
